# secret_ai_accountant

./: .env.local.example  README.md  index.html  package-lock.json  package.json
contract/: .gitignore  Cargo.toml
contract/src/: contract.rs  msg.rs  state.rs
contract/tests/: permit.json
docs/: code.md  guide.md  install.md
src/: App.tsx  AuditorScreen.tsx  CompanyScreen.tsx  CreateFingerprint.tsx  FileUpload.tsx  OCRService.ts  PDFViewer.tsx  config.ts  contract.ts  llama-ocr-buffer.tsx
